tests/ui/errors/inconsistent-sizes.both-present.stderr
error: `min_size` should be strictly less than `max_size`.
 --> tests/ui/errors/inconsistent-sizes.both-present.rs:6:15
  |
6 |     #[tuples::min_size(2)]
  |               ^^^^^^^^
